# deccp-weak-to-strong

./: .gitignore  README.md  pyproject.toml  requirements.txt  weak_to_strong.ipynb
prompts/: judge_prompt.md
reports/: weak_to_strong_for_DECCP_2.tex
results/: finetuned_weak_model_responses.csv
results/baseline/judged/: results_deepseek_7b_judged.csv  results_qwen_0_5b_judged.csv  results_qwen_14b_judged.csv  results_qwen_1_5b_judged.csv
results/baseline/raw/: results_deepseek_7b.csv  results_qwen_0_5b.csv  results_qwen_14b.csv  results_qwen_1_5b.csv
results/steered/deepseek_r1_distill_qwen_7b/: raw_responses.csv
results/steered/qwen_0_5b/: judged_responses.csv  specificity.csv  summary.csv
results/steered/qwen_14b_w2s/: judged_responses.csv  raw_responses.csv  summary.csv
results/steered/qwen_1_5b/: judged_responses.csv  raw_responses.csv  specificity.csv  summary.csv
results/steered/qwen_7b_w2s/: specificity.csv  summary.csv  w2s_qwen7b_responses.csv  w2s_qwen7b_responses_evaluated.csv
scripts/: analyze_judged_results.py  download_dataset.py  run_eval_generation.py  run_finetuning.py  run_generation.py  run_w2s_steering.py
src/deccp_w2s/: analysis.py  cli.py  dataset.py  generation.py  steering.py
